--- a/helloworld-app/app/templates/application.html
+++ b/helloworld-app/app/templates/application.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>helloworld-ui</title>
+    <title>helloworld-app</title>
     
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -14,7 +14,7 @@
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="/stylesheets/bootstrap.css" rel="stylesheet">
     <link href="/stylesheets/pedestal.css" rel="stylesheet">
-    <link href="/helloworld-ui.css" rel="stylesheet">
+    <link href="/helloworld-app.css" rel="stylesheet">
     
     <!-- Add xpath support to IE. Domina needs this -->
     <!--[if IE]>
