--- a/tutorial/tutorial-client/app/templates/application.html
+++ b/tutorial/tutorial-client/app/templates/application.html
@@ -12,8 +12,8 @@
 
     <!-- Le styles -->
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="/stylesheets/bootstrap.css" rel="stylesheet">
-    <link href="/stylesheets/pedestal.css" rel="stylesheet">
+    <link href="/bootstrap.css" rel="stylesheet">
+    <link href="/pedestal.css" rel="stylesheet">
     <link href="/tutorial-client.css" rel="stylesheet">
 
     <!-- Add xpath support to IE. Domina needs this -->
@@ -36,9 +36,9 @@
     </div> <!-- /container -->
 
     <!-- Add External JavaScript libraries -->
-    <script src="/javascripts/jquery-min.js" type="text/javascript"></script>
-    <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
-    <script src="/javascripts/pedestal/js/api.js" type="text/javascript"></script>
+    <script src="/jquery-min.js" type="text/javascript"></script>
+    <script src="/bootstrap.js" type="text/javascript"></script>
+    <script src="/pedestal/js/api.js" type="text/javascript"></script>
 
     <script id="script-driver"></script>
 
