use separate template for tooling pages

--- a/tutorial/tutorial-client/app/templates/tooling.html
+++ b/tutorial/tutorial-client/app/templates/tooling.html
@@ -35,6 +35,11 @@
 
     </div> <!-- /container -->
 
+    <!-- Add External JavaScript libraries -->
+    <script src="/javascripts/jquery-min.js" type="text/javascript"></script>
+    <script src="/javascirpts/bootstrap.js" type="text/javascript"></script>
+    <script src="/javascripts/pedestal/js/api.js" type="text/javascript"></script>
+
     <script id="script-driver"></script>
 
   </body>
