--- a/helloworld-app/app/templates/application.html
+++ b/helloworld-app/app/templates/application.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>helloworld-app</title>
-    
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,13 +12,13 @@
 
     <!-- Le styles -->
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="/stylesheets/bootstrap.css" rel="stylesheet">
-    <link href="/stylesheets/pedestal.css" rel="stylesheet">
+    <link href="/bootstrap.css" rel="stylesheet">
+    <link href="/pedestal.css" rel="stylesheet">
     <link href="/helloworld-app.css" rel="stylesheet">
-    
+
     <!-- Add xpath support to IE. Domina needs this -->
     <!--[if IE]>
-        <script type="text/javascript" src="js/xpath.js"></script>
+        <script type="text/javascript" src="xpath.js"></script>
         <![endif]-->
 
   </head>
@@ -34,11 +34,6 @@
       <footer></footer>
 
     </div> <!-- /container -->
-
-    <!-- Add External JavaScript libraries -->
-    <script src="/javascripts/jquery-min.js" type="text/javascript"></script>
-    <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
-    <script src="/javascripts/pedestal/js/api.js" type="text/javascript"></script>
 
     <script id="script-driver"></script>
 
