--- a/helloworld-app/app/templates/tooling.html
+++ b/helloworld-app/app/templates/tooling.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>helloworld-app2</title>
-    
+    <title>helloworld-app</title>
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -14,8 +14,8 @@
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="/stylesheets/bootstrap.css" rel="stylesheet">
     <link href="/stylesheets/pedestal.css" rel="stylesheet">
-    <link href="/helloworld-app2.css" rel="stylesheet">
-    
+    <link href="/helloworld-app.css" rel="stylesheet">
+
     <!-- Add xpath support to IE. Domina needs this -->
     <!--[if IE]>
         <script type="text/javascript" src="xpath.js"></script>
