--- a/helloworld-app/tools/public/stylesheets/pedestal.css
+++ b/helloworld-app/tools/public/stylesheets/pedestal.css
@@ -12,6 +12,10 @@
    color: darkgreen;
 }
 
+.node-section {
+    margin-left: 40px;
+}
+
 /* end Clojure data formatter */
 
 /* begin customize bootstrap */
@@ -49,6 +53,30 @@ div.hero-unit p.small {
   border-radius: 5px;
   border-image: initial;
   font-size: 10pt;
+}
+
+#pedestal-status-panel {
+  background-color: rgba(255,255,255,1);
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  padding: 15px;
+  padding-right: 25px;
+  box-shadow: inset 1px 1px 1px #666;
+  border-radius: 5px;
+  border-image: initial;
+  font-size: 10pt;
+}
+
+#pedestal-status-panel.pedestal-recording-status {
+  font-size: 20px;
+  font-weight: bold;
+  color: red;
+}
+
+.pedestal-recording-status-message {
+  font-size: 12px;
+  color: #777;
 }
 
 #pedestal-toolbar a {
