--- a/chat/new-client/app/templates/application.html
+++ b/chat/new-client/app/templates/application.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>chat-client</title>
-    
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,10 +12,9 @@
 
     <!-- Le styles -->
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="/bootstrap.css" rel="stylesheet">
     <link href="/pedestal.css" rel="stylesheet">
-    <link href="/chat-client.css" rel="stylesheet">
-    
+    <link href="/chat-client-sample.css" rel="stylesheet">
+
     <!-- Add xpath support to IE. Domina needs this -->
     <!--[if IE]>
         <script type="text/javascript" src="xpath.js"></script>
@@ -34,6 +33,11 @@
       <footer></footer>
 
     </div> <!-- /container -->
+
+    <!-- Add External JavaScript libraries -->
+    <script src="/jquery-min.js" type="text/javascript"></script>
+    <script src="/bootstrap.js" type="text/javascript"></script>
+    <script src="/pedestal/js/api.js" type="text/javascript"></script>
 
     <script id="script-driver"></script>
 
