--- a/chat/new-client/app/templates/application.html
+++ b/chat/new-client/app/templates/application.html
@@ -13,7 +13,7 @@
     <!-- Le styles -->
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="/pedestal.css" rel="stylesheet">
-    <link href="/chat-client-sample.css" rel="stylesheet">
+    <link href="/chat-client.css" rel="stylesheet">
 
     <!-- Add xpath support to IE. Domina needs this -->
     <!--[if IE]>
