--- a/chat/chat-client/app/templates/application.html
+++ b/chat/chat-client/app/templates/application.html
@@ -13,11 +13,11 @@
     <!-- Le styles -->
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="/pedestal.css" rel="stylesheet">
-    <link href="/chat-client-sample.css" rel="stylesheet">
+    <link href="/chat-client.css" rel="stylesheet">
 
     <!-- Add xpath support to IE. Domina needs this -->
     <!--[if IE]>
-        <script type="text/javascript" src="js/xpath.js"></script>
+        <script type="text/javascript" src="xpath.js"></script>
         <![endif]-->
 
   </head>
