--- a/chat/chat-client/app/templates/tooling.html
+++ b/chat/chat-client/app/templates/tooling.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>chat-client</title>
-
+    
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,12 +12,12 @@
 
     <!-- Le styles -->
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="/pedestal.css" rel="stylesheet">
-    <link href="/bootstrap.css" rel="stylesheet">
-
+    <link href="/stylesheets/bootstrap.css" rel="stylesheet">
+    <link href="/stylesheets/pedestal.css" rel="stylesheet">
+    
     <!-- Add xpath support to IE. Domina needs this -->
     <!--[if IE]>
-        <script type="text/javascript" src="js/xpath.js"></script>
+        <script type="text/javascript" src="xpath.js"></script>
         <![endif]-->
 
   </head>
@@ -35,9 +35,9 @@
     </div> <!-- /container -->
 
     <!-- Add External JavaScript libraries -->
-    <script src="/jquery-min.js" type="text/javascript"></script>
-    <script src="/bootstrap.js" type="text/javascript"></script>
-    <script src="/pedestal/js/api.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery-min.js" type="text/javascript"></script>
+    <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
+    <script src="/javascripts/pedestal/js/api.js" type="text/javascript"></script>
 
     <script id="script-driver"></script>
 
